                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-05-2006 fixed: AM/PM switched in time display
 - 20-05-2006 fixed: Startup window setting was broken.
 - 19-05-2006 updated: French language file
 - 19-05-2006 updated: Chinese (Traditional) language file (Thnx to dog099)
 - 19-05-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 19-05-2006 updated: Polish language file (Thnx to smuto and the Polish Community Forum)
 - 19-05-2006 fixed: Esperanto language file was UTF-16 encoded
 - 19-05-2006 fixed: [ 1491374 ] Time/Date Setting Problem
 - 19-05-2006 fixed: TextBox crashed trying to handle linebreaks.
 - 18-05-2006 added: localization of date and time format via langinfo.xml
 - 18-05-2006 fixed: music nav, when the language is changed, the shares are displayed in the previous language
 - 18-05-2006 changed: lowered protocol level of cddb to 5 again (none utf8 queries to freedb)
 - 18-05-2006 added: masterlock to AdvancedSettings.xml! Check XBMC Wiki for more informations!
 - 18-05-2006 removed: Masterlock Max. Retries from GUI ! Default Max. Value is: 3!
 - 18-05-2006 changed: Masterlock Settings Controll and  GUI conditions Controll
 - 18-05-2006 added: Master User Modes: Normal User/ Advanced User! Check XBMC Wiki for more informations!
 - 18-05-2006 fixed: [ 1490023 ] Locked overlay thumb not showing
 - 18-05-2006 fixed: [ 1478366 ] Master Lock
 - 18-05-2006 fixed: [ 1478514 ] Couple of problems with MASTERLOCK
 - 18-05-2006 fixed: [ 1479324 ] Wrong FTP username in settings when not online (a test is required)
 - 18-05-2006 fixed: [ 1479328 ] Wrong modchip detection message
