@@ -11,8 +11,5 @@ public:
 
   virtual bool OnMessage(CGUIMessage& message);
   virtual bool OnAction(const CAction &action);
-  virtual void Render();
   virtual void OnWindowLoaded();
-protected:
-  DWORD m_dwOSDTimeOut;
 };
